some improve
add audio decoder interface to support more audio formats
rewrite some code on Java10 standard(unfinished)
add transfer handler setter in Engine
some lazy methods in VectorInt/Dbl